# MIPT-networked-HW-PKiyashko

./: .clang-format  .gitignore  CMakeLists.txt
HW/: CMakeLists.txt  README.md  bitstream.hpp  client.cpp  common.h  entity.cpp  entity.h  entity.hpp  history.hpp  lobby.cpp  main.cpp  math_utils.hpp  polling_service.hpp  protocol.cpp  protocol.h  protocol.hpp  quantization.hpp  server.cpp  shared_consts.hpp  utils.h
